--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="https://github.com/fenghao1994/Ticket">android: 折扣券小实例</a>
       </li>
       <li>
-        <a href="http://blog.csdn.net/u013513228/article/details/51501735">RecyclerView拖拽和活动的简单实现</a>
+        <a href="http://blog.csdn.net/u013513228/article/details/51501735">RecyclerView拖拽和滑动删除的简单实现</a>
       </li>
      </p>
       <footer class="site-footer">
