增加git学习笔记(log 和 diff 篇)

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <li>
         <a href="http://blog.csdn.net/u013513228/article/details/51501735">RecyclerView拖拽和滑动删除的简单实现</a>
       </li>
+      <li>
+      	<a href="git学习笔记.md">git学习笔记</a>
+      </li>
      </p>
       <footer class="site-footer">
 
