--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="http://blog.csdn.net/u013513228/article/details/51501735">RecyclerView拖拽和滑动删除的简单实现</a>
       </li>
       <li>
-      	<a href="git学习笔记.md">git学习笔记</a>
+      	<a href="http://blog.csdn.net/u013513228/article/details/78791344">git学习笔记</a>
       </li>
      </p>
       <footer class="site-footer">
